sample-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod
  labels:
    app: sample-app
    env: prod
spec:
    containers:
    - name: httpd-container
      image: httpd:latest
      ports:
      - containerPort: 80
