nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: default
spec:
  ports:
  - nodePort: 30425
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx
