sample-svc-ci.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-svc-cip
spec:
  selector:
    app: sample-app
    env: prod
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 80
