sample-svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-svc-lb
spec:
  selector:
    app: sample-app
    env: prod
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30010
