svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-svc
spec:
  selector:
    app: sample-app
    env: prod
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
